--- a/Login/index.html
+++ b/Login/index.html
@@ -6,6 +6,7 @@
     <title>LOGIN</title>
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="medias.css">
 </head>
 <body>
     
@@ -27,7 +28,7 @@
 
                         <div class="input-box">
                             <i class='bx bxs-lock-alt' ></i>
-                            <input type="password" required minlength="8" placeholder="Senha">
+                            <input type="password" required placeholder="Senha">
                         </div>
                     </form>
                 </div>
@@ -42,7 +43,7 @@
                     </div>
 
                     <div class="forgot-link">
-                        <a href="#">Esqueceu a senha</a>
+                        <a href="#">Esqueceu a senha?</a>
                     </div>
                 </div>
 
