movies zone build 2

--- a/movies-zone/index.html
+++ b/movies-zone/index.html
@@ -50,18 +50,52 @@
             <button>Saiba mais</button>
         </section>
 
+        <h3 class="trend-title">em alta</h3>
+
         <section class="trend">
-            <div class="item1">
+            <div class="item">
                 1
             </div>
 
-            <div class="item2">
+            <div class="item">
                 2
             </div>
 
-            <div class="item3">
+            <div class="item">
                 3
             </div>
+        </section>
+
+        <h3 class="motives-title">Mais motivos para assinar</h3>
+
+        <section class="motives">
+            <div class="mot">
+                <h4>Aproveite na TV</h4>
+
+                <p>Assista em Smart TVs, PlayStation, Xbox, Chromecast, Apple TV, aparelhos de Blu-ray e outros dispositivos.</p>
+            </div>
+
+            <div class="mot">
+                <h4>Baixe séries para assistir offline</h4>
+
+                <p>Salve seus títulos favoritos e sempre tenha algo para assistir.</p>
+            </div>
+
+            <div class="mot">
+                <h4>Assista onde quiser</h4>
+
+                <p>Assista a quantos filmes e séries quiser no celular, tablet, laptop e TV.</p>
+            </div>
+
+            <div class="mot">
+                <h4>Crie perfis para crianças</h4>
+
+                <p>Deixe as crianças se aventurarem com seus personagens favoritos em um espaço feito só para elas, sem pagar a mais por isso.</p>
+            </div>
+        </section>
+
+        <section class="form">
+            
         </section>
     </main>
 
