movies zone build 3

--- a/movies-zone/index.html
+++ b/movies-zone/index.html
@@ -40,7 +40,7 @@
             </div>
 
             <div class="login-button">
-                <button>Vamos lá</button>
+                <button>Vamos lá ></button>
             </div>
         </section>
 
@@ -94,13 +94,25 @@
             </div>
         </section>
 
-        <section class="form">
-            
+        <section class="late-form">
+            <p>Quer assistir? informe seu email para criar ou reniciar sua assinatura.</p>
+            <input type="email" placeholder="email" required>
+            <button>Vamos lá</button>
         </section>
     </main>
 
     <footer>
+        <p>Dúvidas ligue para 4002 89 2200</p>
 
+        <ul>
+            <li><a href="#">Perguntas frequentes</a></li>
+            <li><a href="#">Conta</a></li>
+            <li><a href="#">Central de ajuda</a></li>
+            <li><a href="#">Termos de uso</a></li>
+            <li><a href="#">Privacidade</a></li>
+        </ul>
+
+        <p id="logo">@Movies Zone brasil</p>
     </footer>
 
 </body>
