--- a/nova-site/index.html
+++ b/nova-site/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>NOVA</title>
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
+    <link rel="stylesheet" href="estilos/style.css">
 </head>
 <body>
     
@@ -26,6 +27,8 @@
                 <li><a href="#">Séries</a></li>
                 <li><a href="#">Esportes</a></li>
                 <li><a href="#">TV aberta</a></li>
+
+                <button>Fazer assinatura</button>
             </ul>
         </nav>
     </aside>
@@ -33,15 +36,15 @@
     <main>
         <section id="hero">
             <div id="hero-title">
-                <h1>Filmes, séries e muito mais sem limites</h1>
+                <h1>Filmes, séries e muito mais, sem limites</h1>
                 
                 <p>A partir de R$ 00,00. Cancele quando quiser.</p>
             </div>
 
             <div class="input-box">
-                <form action="">
-                    <p>Quer começar a diversão? use seu email para criar sua assinatura</p>
+                <p>Quer começar a diversão? use seu email para criar sua assinatura</p>
 
+                <form action="">
                     <input type="email" placeholder="email" required>
 
                     <button>Comece agora</button>
