--- a/nova-site/index.html
+++ b/nova-site/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>NOVA</title>
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css">
     <link rel="stylesheet" href="estilos/style.css">
 </head>
 <body>
@@ -44,8 +45,8 @@
             <div class="input-box">
                 <p>Quer começar a diversão? use seu email para criar sua assinatura</p>
 
-                <form action="">
-                    <input type="email" placeholder="email" required>
+                <form action="" class="input-form">
+                    <input type="email" placeholder="Email" required>
 
                     <button>Comece agora</button>
                 </form>
@@ -53,21 +54,34 @@
         </section>
 
         <section id="promo">
-            <div class="promo-box">
-                <h2>A Nova que você ama por apenas R$ 00,00</h2>
+            <h2>A Nova que você ama por apenas R$ 00,00</h2>
 
-                <p>Assista seus filmes e séries favoritos sem interrupção de anúncios</p>
+            <p>Assista seus filmes e séries favoritos sem interrupção de anúncios</p>
 
-                <button>Saiba mais</button>
-            </div>
+            <button>Saiba mais</button>
         </section>
 
-        <section id="trending">
+        <section id="trending" >
             <h2>Em alta</h2>
 
-            <div class="item">1</div>
-            <div class="item">2</div>
-            <div class="item">3</div>
+            <div id="card-slider" class="swiper">
+                <ul id="card-list" class="swiper-wrapper">
+                    <li id="card-item" class="swiper-slide">1</li>
+                    <li id="card-item" class="swiper-slide">2</li>
+                    <li id="card-item" class="swiper-slide">3</li>
+                    <li id="card-item" class="swiper-slide">4</li>
+                    <li id="card-item" class="swiper-slide">5</li>
+                    <li id="card-item" class="swiper-slide">6</li>
+                    <li id="card-item" class="swiper-slide">7</li>
+                    <li id="card-item" class="swiper-slide">8</li>
+                    <li id="card-item" class="swiper-slide">9</li>
+                    <li id="card-item" class="swiper-slide">10</li>
+                </ul>
+
+                <div class="swiper-pagination"></div>
+                <div class="swiper-button-prev"></div>
+                <div class="swiper-button-next"></div>
+            </div>
         </section>
 
         <section id="benefits">
@@ -125,5 +139,8 @@
         <p><a href="https://github.com/JacksonWeudes">@JacksonWeudesAlves</a></p>
     </footer>
 
+    <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
+
+    <script src="script.js"></script>
 </body>
 </html>
