--- a/nova-site/index.html
+++ b/nova-site/index.html
@@ -5,7 +5,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>NOVA</title>
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css">
     <link rel="stylesheet" href="estilos/style.css">
 </head>
 <body>
@@ -64,24 +63,18 @@
         <section id="trending" >
             <h2>Em alta</h2>
 
-            <div id="card-slider" class="swiper">
-                <ul id="card-list" class="swiper-wrapper">
-                    <li id="card-item" class="swiper-slide">1</li>
-                    <li id="card-item" class="swiper-slide">2</li>
-                    <li id="card-item" class="swiper-slide">3</li>
-                    <li id="card-item" class="swiper-slide">4</li>
-                    <li id="card-item" class="swiper-slide">5</li>
-                    <li id="card-item" class="swiper-slide">6</li>
-                    <li id="card-item" class="swiper-slide">7</li>
-                    <li id="card-item" class="swiper-slide">8</li>
-                    <li id="card-item" class="swiper-slide">9</li>
-                    <li id="card-item" class="swiper-slide">10</li>
-                </ul>
-
-                <div class="swiper-pagination"></div>
-                <div class="swiper-button-prev"></div>
-                <div class="swiper-button-next"></div>
-            </div>
+                <div class="scroll-container">
+                    <div class="item">1</div>
+                    <div class="item">2</div>
+                    <div class="item">3</div>
+                    <div class="item">4</div>
+                    <div class="item">5</div>
+                    <div class="item">6</div>
+                    <div class="item">7</div>
+                    <div class="item">8</div>
+                    <div class="item">9</div>
+                    <div class="item">10</div>
+                </div>
         </section>
 
         <section id="benefits">
@@ -139,8 +132,5 @@
         <p><a href="https://github.com/JacksonWeudes">@JacksonWeudesAlves</a></p>
     </footer>
 
-    <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
-
-    <script src="script.js"></script>
 </body>
 </html>
