--- a/nova-site/index.html
+++ b/nova-site/index.html
@@ -81,7 +81,7 @@
             <h2>Mais motivos para assinar</h2>
 
             <div class="benefits-box">
-                <div>
+                <div class="benefit-item">
                     <h3>Aproveite na TV</h3>
 
                     <p>
@@ -89,7 +89,7 @@
                     </p>
                 </div>
 
-                <div>
+                <div class="benefit-item">
                     <h3>Baixe séries para assistir offline</h3>
 
                     <p>
@@ -97,7 +97,7 @@
                     </p>
                 </div>
 
-                <div>
+                <div class="benefit-item">
                     <h3>Assista onde quiser</h3>
 
                     <p>
@@ -105,7 +105,7 @@
                     </p>
                 </div>
 
-                <div>
+                <div class="benefit-item">
                     <h3>Crie perfis para crianças</h3>
 
                     <p>
@@ -117,7 +117,7 @@
 
         <section id="sign-up-end">
             <div class="input-box">
-                <form action="">
+                <form action="" class="input-form">
                     <p>Quer começar a diversão? use seu email para criar sua assinatura</p>
 
                     <input type="email" placeholder="email" required>
@@ -129,7 +129,7 @@
     </main>
 
     <footer>
-        <p><a href="https://github.com/JacksonWeudes">@JacksonWeudesAlves</a></p>
+        <p><a href="https://github.com/JacksonWeudes" target="_blank">@JacksonWeudesAlves</a></p>
     </footer>
 
 </body>
