--- a/nova-site/index.html
+++ b/nova-site/index.html
@@ -15,7 +15,7 @@
         </div>
 
         <div id="mobile-menu-icon">
-            <button><i class='bx bx-menu'></i></button>
+            <button id="menu-button "><i class='bx bx-menu'></i></button>
         </div>
     </header>
 
