versão mobile finalizada

--- a/nova-site/index.html
+++ b/nova-site/index.html
@@ -6,6 +6,7 @@
     <title>NOVA</title>
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
     <link rel="stylesheet" href="estilos/style.css">
+    <link rel="stylesheet" href="estilos/medias.css">
 </head>
 <body>
     
@@ -15,7 +16,7 @@
         </div>
 
         <div id="mobile-menu-icon">
-            <button id="menu-button "><i class='bx bx-menu'></i></button>
+            <button id="menu-button"><i class='bx bx-menu'></i></button>
         </div>
     </header>
 
@@ -132,5 +133,7 @@
         <p><a href="https://github.com/JacksonWeudes" target="_blank">@JacksonWeudesAlves</a></p>
     </footer>
 
+
+    <script src="script.js"></script>
 </body>
 </html>
